2004-05-06  Pierre-Luc Paour <gallery@paour.com> (1.4-b7)

	* Added support for cropping before upload! This is done in
	  the preview window. For best performance, this needs the
	  patched version of jpegtran that adds a -crop option for
	  lessless cropping.
	* Fixed New Album and Move Album.
	* Added support for pre-downloading all pictures in slideshow.

	This version is ready to replace 1.3.3 as the default branch
	Saving is still disabled, though. Be careful.
	Also on my machine, GR stalls without a message on Linux, both
	on Blackdown and Sun VMs.

2004-04-28  Pierre-Luc Paour <gallery@paour.com> (1.4-b6)

	* Added GeekLog support.
	* Fixed updating the album tree after creating an album.
	* Slideshow: better feedback when manually moving to another picture.
	* Slideshow: fixed picture-switching delay being incorrect after manually
	  moving to another picture.
	* New preference to override background color for slideshow and preview.
	* Slideshow: new method for painting information on top of image, text no longer
	  moves.
	* Slideshow: new controller display, similar to iPhoto, with help.

2004-04-21  Pierre-Luc Paour <gallery@paour.com> (1.4-b5)

	* Added support for Gallery aliases, to use as a handle instead of the
	  Gallery URL in the GR UI.
	* Implemented slideshow preference to not stretch small images in
	  preview and slideshow.
	* Fixed local slideshow broken in 1.4-b3.
	* Fixed one syntax incompatibility for Java 1.5.

2004-04-20  Pierre-Luc Paour <gallery@paour.com> (1.4-b4)

	* Added German translation, courtesy of Hubert Baumgartner.

2004-04-20  Pierre-Luc Paour <gallery@paour.com> (1.4-b3)

	* When ImageMagick is not available, resize before upload
	  uses Java 1.4 ImageIO to resize the image. This might cause
	  OutOfMemoryErrors in some cases; I'm trying to reproduce.
	  It also causes the EXIF information to be lost. I'm trying to find
	  a way to fix this, but the ImageIO classes (java 1.4) are pretty
	  broken.